--- a/index.html
+++ b/index.html
@@ -9,9 +9,93 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>Foodbyte</h1>
+    <main class="container">
+      <div class="container-left">
+        <h1>Foodbyte Menu</h1>
+        <button>Add New Menu</button>
+        <section>
+          <div class="menu-item">
+            <button>+</button>
+            <img
+              class="menu-image"
+              src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe/recipe-image/2016/05/nasi-goreng.jpg"
+              alt="Nasi Goreng"
+            />
+            <span>Nasi Goreng</span>
+            <button>DELETE</button>
+          </div>
+          <div class="menu-item">
+            <button>+</button>
+            <img
+              class="menu-image"
+              src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe/recipe-image/2016/05/nasi-goreng.jpg"
+              alt="Nasi Goreng"
+            />
+            <span>Nasi Goreng</span>
+            <button>DELETE</button>
+          </div>
+        </section>
+      </div>
 
-    <nav></nav>
+      <div class="container-right">
+        <div class="collection">
+          <form class="collection-title">
+            <h2>Collection Name</h2>
+            <input
+              class="input-collection-name"
+              type="text"
+              placeholder="Your collection name"
+            />
+            <input type="submit" value="Save Collection" />
+          </form>
+          <section class="menu-list">
+            <div class="menu-item">
+              <img
+                class="menu-image"
+                src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe/recipe-image/2016/05/nasi-goreng.jpg"
+                alt="Nasi Goreng"
+              />
+              <span>Nasi Goreng</span>
+            </div>
+            <div class="menu-item">
+              <img
+                class="menu-image"
+                src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe/recipe-image/2016/05/nasi-goreng.jpg"
+                alt="Nasi Goreng"
+              />
+              <span>Nasi Goreng</span>
+            </div>
+          </section>
+        </div>
+
+        <div class="collection-list">
+          <div class="collection-item">
+            <h3>Week 1</h3>
+            <hr />
+            <ul>
+              <li>Nasi Goreng</li>
+              <li>Soto Ayam</li>
+            </ul>
+          </div>
+          <div class="collection-item">
+            <h3>Week 2</h3>
+            <hr />
+            <ul>
+              <li>Nasi Goreng</li>
+              <li>Soto Ayam</li>
+            </ul>
+          </div>
+          <div class="collection-item">
+            <h3>Week 3</h3>
+            <hr />
+            <ul>
+              <li>Nasi Goreng</li>
+              <li>Soto Ayam</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </main>
 
     <script src="index.js"></script>
   </body>
