Improve layouting on the menu list

--- a/index.html
+++ b/index.html
@@ -38,30 +38,14 @@
               value="Save Collection"
             />
           </form>
-          <section class="menu-list">
-            <div class="menu-item">
-              <img
-                class="menu-image"
-                src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe/recipe-image/2016/05/nasi-goreng.jpg"
-                alt="Nasi Goreng"
-              />
-              <span>Nasi Goreng</span>
-            </div>
-            <div class="menu-item">
-              <img
-                class="menu-image"
-                src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe/recipe-image/2016/05/nasi-goreng.jpg"
-                alt="Nasi Goreng"
-              />
-              <span>Nasi Goreng</span>
-            </div>
+          <section id="collection-menu-list" class="collection-menu-list">
+            <!-- SELECTED COLLECTION MENU LIST -->
           </section>
         </div>
 
         <div class="collection-list">
           <div class="collection-item">
             <h3>Week 1</h3>
-            <hr />
             <ul>
               <li>Nasi Goreng</li>
               <li>Soto Ayam</li>
@@ -69,7 +53,6 @@
           </div>
           <div class="collection-item">
             <h3>Week 2</h3>
-            <hr />
             <ul>
               <li>Nasi Goreng</li>
               <li>Soto Ayam</li>
@@ -77,7 +60,6 @@
           </div>
           <div class="collection-item">
             <h3>Week 3</h3>
-            <hr />
             <ul>
               <li>Nasi Goreng</li>
               <li>Soto Ayam</li>
