--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Foodbyte</title>
 
+    <link rel="stylesheet" href="node_modules/animate.css/animate.min.css" />
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
