--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <div class="container">
-      <p>Menu Position</p>
+      <h1>FoodByte Menu</h1>
+      <div id="menu-items"></div>
     </div>
+
+    <script src="index.js"></script>
   </body>
 </html>
