Add item functionality

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>Food Byte</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <div class="container">
       <h1>FoodByte Menu</h1>
+      <button onclick="App.addItem()">Add A Dish</button>
       <div id="menu-items"></div>
     </div>
 
