Style the dish card

--- a/index.html
+++ b/index.html
@@ -9,9 +9,21 @@
   </head>
   <body>
     <div class="container">
-      <h1>FoodByte Menu</h1>
-      <button onclick="App.addItem()">Add A Dish</button>
-      <div id="menu-items"></div>
+      <div class="left-container">
+        <h1>FoodByte Menu</h1>
+        <button onclick="App.addItem()">Add A Dish</button>
+        <div id="menu-items"></div>
+      </div>
+      <div class="right-container">
+        <h1>Right container</h1>
+        <ul>
+          <li>toto</li>
+          <li>toto</li>
+          <li>toto</li>
+          <li>toto</li>
+          <li>toto</li>
+        </ul>
+      </div>
     </div>
 
     <script src="index.js"></script>
