Fix displayMenu behavior

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="left-container">
         <div class="nav-bar">
           <div class="recipe-home-search">
-            <form onsubmit="App.searchItem(event)" class="menu-form">
+            <form onsubmit="App.searchItem()" class="menu-form">
               <input
                 id="search-word"
                 type="text"
